--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,4 +1,11 @@
 $app-color-text: #171D19;
-$app-color-subtext: #5D737E;
+$app-color-subtext: #636241;
 $app-color-bg: #F0F7EE;
-$app-font: 'Rounded Mplus 1c';
+$app-color-shadow: #ced4da;
+
+$app-color-gray1: #e9ecef;
+$app-color-gray2: #adb5bd;
+$app-color-gray3: #343a40;
+$app-color-primary: #714CA5;
+$app-color-blue: #63ABD8;
+$app-color-green: #4FA533;
