new product backlog item

--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -31,7 +31,7 @@
             </h1>
           </div>
           <div class="pbl-Header_Actions">
-            <%= link_to '', class: 'btn btn-outline-success' do -%>
+            <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-outline-success' do -%>
               <i class="fa fa-plus-circle"></i>
               追加する
             <% end -%>
