--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -148,7 +148,8 @@ $body-color:                $app-color-text;
 // Style anchor elements.
 
 $link-color:                theme-color("primary") !default;
-$link-decoration:           none !default;
+$link-decoration:           underline !default;
+//$link-decoration:           none !default;
 $link-hover-color:          darken($link-color, 15%) !default;
 $link-hover-decoration:     underline !default;
 
@@ -322,10 +323,8 @@ $table-dark-color:            $body-bg !default;
 //
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
 
-//$input-btn-padding-y:         .375rem !default;
-$input-btn-padding-y:         .25rem !default;
-//$input-btn-padding-x:         .75rem !default;
-$input-btn-padding-x:         1rem !default;
+$input-btn-padding-y:         .375rem !default;
+$input-btn-padding-x:         .75rem !default;
 $input-btn-line-height:       $line-height-base !default;
 
 $input-btn-focus-width:       .2rem !default;
@@ -347,8 +346,10 @@ $input-btn-border-width:      $border-width !default;
 //
 // For each of Bootstrap's buttons, define text, background, and border color.
 
-$btn-padding-y:               $input-btn-padding-y !default;
-$btn-padding-x:               $input-btn-padding-x !default;
+//$btn-padding-y:               $input-btn-padding-y !default;
+$btn-padding-y:               .25rem !default;
+$btn-padding-x:               1rem !default;
+//$btn-padding-x:               $input-btn-padding-x !default;
 $btn-line-height:             $input-btn-line-height !default;
 
 $btn-padding-y-sm:            $input-btn-padding-y-sm !default;
@@ -399,7 +400,8 @@ $input-disabled-bg:                     $gray-200 !default;
 
 $input-color:                           $gray-700 !default;
 $input-border-color:                    $gray-400 !default;
-$input-border-width:                    $input-btn-border-width !default;
+//$input-border-width:                    $input-btn-border-width !default;
+$input-border-width:                    2px !default;
 $input-box-shadow:                      inset 0 1px 1px rgba($black, .075) !default;
 
 $input-border-radius:                   $border-radius !default;
