--- a/app/views/shared/_global_nav.html.erb
+++ b/app/views/shared/_global_nav.html.erb
@@ -1,5 +1,5 @@
 <nav class="nav-Global navbar navbar-expand-md fixed-top navbar-light bg-light">
-  <a class="nav-Global_AppName navbar-brand" href="#">Laminate</a>
+  <a class="nav-Global_AppName navbar-brand" href="/">Laminate</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
