--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,7 +1,11 @@
 $app-color-text: #171D19;
-$app-color-subtext: #636241;
+$app-color-subtext: #7F7E63;
 $app-color-bg: #F0F7EE;
 $app-color-shadow: #ced4da;
+
+$app-font-size: .875rem;
+$app-font-size-sm: .75rem;
+$app-font-size-lg: 1rem;
 
 $app-color-gray1: #e9ecef;
 $app-color-gray2: #adb5bd;
