--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,29 +7,11 @@
 @import 'mixins';
 @import 'site_wide';
 @import 'form';
+@import 'navigation';
 @import 'product_backlog';
 @import 'product_backlog_item';
 
-.nav-link {
-  text-decoration: none;
-}
-
-.nav-Global {
-  background-color: rgba(255,255,255,.9) !important;
-  border-bottom: 1px solid lighten($app-color-shadow, 10%);
-}
-
-.nav-Global_AppName {
-  color: $app-color-primary !important;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.btn {
-  text-decoration: none;
-}
-
 body {
-  padding-top: calc(56px + 1.5rem);
+  padding-top: calc(56px + 1rem);
   padding-bottom: 3rem;
 }
