--- a/app/assets/stylesheets/product_backlog.scss
+++ b/app/assets/stylesheets/product_backlog.scss
@@ -6,7 +6,6 @@
   @extend .d-flex, .align-items-center;
   margin: 0 2rem;
   padding: .75rem 0;
-  border-bottom: 1px solid $app-color-shadow;
 }
 
 .pbl-Title {
@@ -48,7 +47,7 @@
 
 .pbl-Item_Id {
   @include nf;
-  font-size: .875rem;
+  font-size: $app-font-size;
   font-weight: bold;
   color: $app-color-subtext;
 }
@@ -57,7 +56,7 @@
   @include nf;
   margin: .25rem 0 0;
   line-height:1.25rem;
-  font-size: .875rem;
+  font-size: $app-font-size;
 }
 
 .pbl-Item_Tail {
@@ -70,7 +69,7 @@
   color: lighten($app-color-blue, 30%);
   font-weight: bold;
   border-radius: 50%;
-  width: 2.25rem;
-  font-size: 1.5rem;
+  width: 1.875rem;
+  font-size: 1.25rem;
   text-align: center;
 }
