--- a/app/views/pages/new_product_backlog_item.html.erb
+++ b/app/views/pages/new_product_backlog_item.html.erb
@@ -1,4 +1,17 @@
 <div class="row">
+  <div class="col-lg-12 mx-auto">
+    <div class="breadcrumbs">
+      <%= link_to 'プロジェクトホーム', '', class: '' -%>
+      <i class="fa fa-angle-right"></i>
+      <%= link_to 'プロダクトバックログ', page_url(:product_backlog), class: '' -%>
+      <i class="fa fa-angle-right"></i>
+      <span>
+        新規追加
+      </span>
+    </div>
+  </div>
+</div>
+<div class="row">
   <div class="col-lg-8 mx-auto">
     <div class="sw-Sheet">
       <div class="pbi-New_Container">
@@ -36,7 +49,8 @@
               <% end -%>
             </div>
             <div class="frm-Actions">
-              <button type="submit" class="btn btn-outline-success">
+              <button type="submit" class="btn btn-success">
+                <i class="fa fa-plus"></i>
                 追加する
               </button>
               <%= link_to 'キャンセル', page_url(:product_backlog), class: 'frm-Action_Cancel' %>
