--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import 'mixins';
 @import 'site_wide';
 @import 'form';
+@import 'structure';
 @import 'navigation';
 @import 'product_backlog';
 @import 'product_backlog_item';
