--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -33,43 +33,41 @@
 </div>
 <div class="row">
   <div class="col-lg-10 mx-auto">
-    <div class="sw-Sheet">
-      <div class="pbl-Container">
-        <div class="pbl-Header">
-          <div class="pbl-Header_Title">
-            <h1 class="pbl-Title">
-              プロダクトバックログ
-            </h1>
-          </div>
-          <div class="pbl-Header_Actions">
-            <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-success' do -%>
-              <i class="fa fa-plus"></i>
-              追加する
-            <% end -%>
-          </div>
+    <div class="st-Content">
+      <div class="st-Content_Header">
+        <div class="pbl-Header_Title">
+          <h1 class="pbl-Title">
+            プロダクトバックログ
+          </h1>
         </div>
-        <div class="pbl-List">
-          <% items.each do |i| -%>
-            <div class="pbl-Item">
-              <div class="pbl-Item_Header">
-                <i class="pbl-Item_Handle"></i>
-              </div>
-              <div class="pbl-Item_Body">
-                <span class="pbl-Item_Id">
-                  #<%= i[:id] %>
-                </span>
-                <p class="pbl-Item_Content">
-                  <%= i[:content].join('<br>').html_safe %>
-                </p>
-              </div>
-              <div class="pbl-Item_Tail">
-                <div class="pbl-Item_Amount">
-                  <%= i[:point] %>
-                </div>
-              </div>
-            </div>
+        <div class="pbl-Header_Actions">
+          <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-success' do -%>
+            <i class="fa fa-plus"></i>
+            追加する
           <% end -%>
         </div>
+      </div>
+      <div class="st-Content_Body">
+        <% items.each do |i| -%>
+          <div class="pbl-Item">
+            <div class="pbl-Item_Header">
+              <i class="pbl-Item_Handle"></i>
+            </div>
+            <div class="pbl-Item_Body">
+              <span class="pbl-Item_Id">
+                #<%= i[:id] %>
+              </span>
+              <p class="pbl-Item_Content">
+                <%= i[:content].join('<br>').html_safe %>
+              </p>
+            </div>
+            <div class="pbl-Item_Tail">
+              <div class="pbl-Item_Amount">
+                <%= i[:point] %>
+              </div>
+            </div>
+          </div>
+        <% end -%>
       </div>
     </div>
   </div>
