--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -21,14 +21,11 @@
   },
 ] %>
 <div class="row">
-  <div class="col-lg-12 mx-auto">
-    <div class="breadcrumbs">
-      <%= link_to 'プロジェクトホーム', '', class: '' -%>
-      <i class="fa fa-angle-right"></i>
-      <span>
-        プロダクトバックログ
-      </span>
-    </div>
+  <div class="breadcrumbs">
+    <%= link_to 'プロジェクトホーム', '' -%>
+    <span class="current">
+      プロダクトバックログ
+    </span>
   </div>
 </div>
 <div class="row">
