--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -7,3 +7,8 @@
   font-weight: bold;
   margin-bottom: 0;
 }
+
+@mixin fa-content($content) {
+  font-family: 'FontAwesome';
+  content: $content;
+}
