--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -14,16 +14,20 @@
 }
 
 .breadcrumbs {
-  @extend .d-flex, .align-items-center;
+  display: inline-block;
   font-size: $app-font-size-sm;
-  padding: .25rem .75rem;
-  margin-bottom: 1rem;
+  margin: .25rem auto .75rem;
 
-  i {
-    margin: 0 .5rem;
+  a {
+    &:after {
+      @include fa-content('\f105');
+      display: inline-block;
+      color: $app-color-gray3;
+      margin: 0 .5rem;
+    }
   }
 
-  span {
+  .current {
     background-color: $app-color-gray3;
     color: #FFF;
     padding: .125rem .675rem;
