--- a/app/views/pages/new_product_backlog_item.html.erb
+++ b/app/views/pages/new_product_backlog_item.html.erb
@@ -1,14 +1,10 @@
 <div class="row">
-  <div class="col-lg-12 mx-auto">
-    <div class="breadcrumbs">
-      <%= link_to 'プロジェクトホーム', '', class: '' -%>
-      <i class="fa fa-angle-right"></i>
-      <%= link_to 'プロダクトバックログ', page_url(:product_backlog), class: '' -%>
-      <i class="fa fa-angle-right"></i>
-      <span>
-        新規追加
-      </span>
-    </div>
+  <div class="breadcrumbs">
+    <%= link_to 'プロジェクトホーム', '' -%>
+    <%= link_to 'プロダクトバックログ', page_url(:product_backlog) -%>
+    <span class="current">
+      新規追加
+    </span>
   </div>
 </div>
 <div class="row">
