--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -14,6 +14,7 @@
 }
 
 .breadcrumbs {
+  @include nf;
   display: inline-block;
   font-size: $app-font-size-sm;
   margin: .25rem auto .75rem;
@@ -30,7 +31,7 @@
   .current {
     background-color: $app-color-gray3;
     color: #FFF;
-    padding: .125rem .675rem;
+    padding: .25rem .675rem;
     border-radius: 1rem;
   }
 }
