--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import 'form';
 @import 'structure';
 @import 'navigation';
+@import 'user';
 @import 'product_backlog';
 @import 'product_backlog_item';
 
