--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -12,3 +12,16 @@
   font-family: 'FontAwesome';
   content: $content;
 }
+
+@mixin avatar($size) {
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  border-radius: 50%;
+  font-weight: bold;
+  width: $size;
+  height: $size;
+  line-height: $size;
+  font-size: $size * 0.5;
+  color: $app-color-gray3;
+}
