--- a/app/views/shared/_global_nav.html.erb
+++ b/app/views/shared/_global_nav.html.erb
@@ -3,13 +3,14 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <!--
   <div class="collapse navbar-collapse" id="navbarCollapse">
+    <!--
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">書籍管理</a>
       </li>
     </ul>
+    -->
+    <%= render 'shared/user_menu' %>
   </div>
-  -->
 </nav>
