--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,6 +1,6 @@
 $app-color-text: #171D19;
 $app-color-subtext: #7F7E63;
-$app-color-bg: #F0F7EE;
+$app-color-bg: #F7F8F9;
 $app-color-shadow: #ced4da;
 
 $app-font-size: .875rem;
