--- a/app/views/pages/new_product_backlog_item.html.erb
+++ b/app/views/pages/new_product_backlog_item.html.erb
@@ -11,7 +11,7 @@
   <div class="col-lg-8 mx-auto">
     <div class="st-Content">
       <div class="st-Content_Header-mb">
-        <h1 class="pbi-New_Title">
+        <h1 class="sw-Content_Title">
           新しいプロダクトバックログアイテム
         </h1>
       </div>
