--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -32,11 +32,9 @@
   <div class="col-lg-10 mx-auto">
     <div class="st-Content">
       <div class="st-Content_Header">
-        <div class="pbl-Header_Title">
-          <h1 class="pbl-Title">
-            プロダクトバックログ
-          </h1>
-        </div>
+        <h1 class="sw-Content_Title">
+          プロダクトバックログ
+        </h1>
         <div class="pbl-Header_Actions">
           <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-success' do -%>
             <i class="fa fa-plus"></i>
