--- a/app/assets/stylesheets/site_wide.scss
+++ b/app/assets/stylesheets/site_wide.scss
@@ -4,3 +4,46 @@
   border-radius: .3rem;
   box-shadow: 0 0 7px $app-color-shadow;
 }
+
+.sw-Content_Title {
+  @include heading;
+}
+
+.sw-BlankSlate {
+  position: relative;
+}
+
+.sw-BlankSlate_Body {
+  @include nf;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 75%;
+  padding: 1rem;
+  background: rgba(80,80,50,0.7);
+  color: #FFF;
+}
+
+ul.sw-HorizontalList {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    display: inline;
+
+    &:after {
+      color: $app-color-gray2;
+      content: '\2022';
+      margin: 0 .125rem;
+    }
+
+    &:last-child {
+      &:after {
+        content: none;
+        margin: 0;
+      }
+    }
+  }
+}
