--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,10 @@
-<h1>
+<h5>
   Laminate Pages
-</h1>
+</h5>
+<hr>
+<h6>
+  Product Backlog
+</h6>
 <ul>
   <li>
     <%= link_to 'Product Backlog', page_url(:product_backlog) %>
@@ -10,5 +14,13 @@
   </li>
   <li>
     <%= link_to 'New Product Backlog Item', page_url(:new_product_backlog_item) %>
+  </li>
+</ul>
+<h6>
+  Project
+</h6>
+<ul>
+  <li>
+    <%= link_to 'Project List', page_url(:project_list) %>
   </li>
 </ul>
