--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -23,4 +23,7 @@
   <li>
     <%= link_to 'Project List', page_url(:project_list) %>
   </li>
+  <li>
+    <%= link_to 'New Project', page_url(:new_project) %>
+  </li>
 </ul>
