--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -6,7 +6,7 @@
           あなたのプロジェクト
         </h1>
         <div class="prjl-Header_Actions">
-          <%= link_to '', class: 'btn btn-sm btn-success' do -%>
+          <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success' do -%>
             <i class="fa fa-plus"></i>
             作成する
           <% end -%>
