--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -6,7 +6,7 @@
 
 .nav-Global {
   background-color: rgba(255,255,255,.9) !important;
-  border-bottom: 1px solid lighten($app-color-shadow, 10%);
+  border-bottom: 1px solid $app-color-gray1;
 }
 
 .nav-Global_AppName {
