--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -352,7 +352,8 @@ $btn-padding-x:               1rem !default;
 //$btn-padding-x:               $input-btn-padding-x !default;
 $btn-line-height:             $input-btn-line-height !default;
 
-$btn-padding-y-sm:            $input-btn-padding-y-sm !default;
+//$btn-padding-y-sm:            $input-btn-padding-y-sm !default;
+$btn-padding-y-sm:            .125rem !default;
 //$btn-padding-x-sm:            $input-btn-padding-x-sm !default;
 $btn-padding-x-sm:            .75rem !default;
 $btn-line-height-sm:          $input-btn-line-height-sm !default;
