--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -2,10 +2,11 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-@mixin heading($font-size: 1.0rem) {
+@mixin heading($font-size: 1.5rem) {
   font-size: $font-size;
   font-weight: bold;
   margin-bottom: 0;
+  color: $app-color-gray3;
 }
 
 @mixin fa-content($content) {
