--- a/app/assets/stylesheets/structure.scss
+++ b/app/assets/stylesheets/structure.scss
@@ -14,17 +14,19 @@
 .st-Content_Header {
   @mixin base {
     @extend .d-flex;
-    padding: 1rem 1.5rem 0;
-    margin-bottom: .5rem;
+    padding: 2rem 0 .325rem;
+    margin: 0 3rem;
+    margin-bottom: 1.5rem;
+    border-bottom: 1px solid lighten($app-color-gray3, 10%);
   }
   @include base;
 
   &-mb {
     @include base;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
 }
 
 .st-Content_Body {
-  padding: 0 3.5rem;
+  padding: 0 3.25rem;
 }
