--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -8,8 +8,11 @@ $app-font-size-sm: .75rem;
 $app-font-size-lg: 1rem;
 
 $app-color-gray1: #e9ecef;
-$app-color-gray2: #adb5bd;
-$app-color-gray3: #343a40;
+$app-color-gray2: #aaacae;
+$app-color-gray3: #6a6c6d;
+$app-color-gray4: #555657;
+$app-color-gray5: #3D454C;
+
 $app-color-primary: #714CA5;
 $app-color-blue: #63ABD8;
 $app-color-green: #4FA533;
