--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -2,11 +2,11 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-@mixin heading($font-size: 1.5rem) {
+@mixin heading($font-size: 1.25rem) {
   font-size: $font-size;
   font-weight: bold;
-  margin-bottom: 0;
-  color: $app-color-gray3;
+  margin: .125rem 0;
+  color: $app-color-gray5;
 }
 
 @mixin fa-content($content) {
@@ -34,5 +34,5 @@
   height: $size;
   line-height: $size;
   font-size: $size * 0.5;
-  color: $app-color-gray3;
+  color: $app-color-gray5;
 }
