fix header actions

--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -5,7 +5,7 @@
         <h1 class="sw-Content_Title">
           あなたのプロジェクト
         </h1>
-        <div class="prjl-Header_Actions">
+        <div class="st-Header_Actions">
           <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success' do -%>
             <i class="fa fa-plus"></i>
             作成する
