--- a/app/assets/stylesheets/bootstrap_variables.scss
+++ b/app/assets/stylesheets/bootstrap_variables.scss
@@ -353,9 +353,9 @@ $btn-padding-x:               1rem !default;
 $btn-line-height:             $input-btn-line-height !default;
 
 //$btn-padding-y-sm:            $input-btn-padding-y-sm !default;
-$btn-padding-y-sm:            .125rem !default;
+$btn-padding-y-sm:            0 !default;
 //$btn-padding-x-sm:            $input-btn-padding-x-sm !default;
-$btn-padding-x-sm:            .75rem !default;
+$btn-padding-x-sm:            1rem !default;
 $btn-line-height-sm:          $input-btn-line-height-sm !default;
 
 $btn-padding-y-lg:            $input-btn-padding-y-lg !default;
