--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -5,7 +5,7 @@
 @mixin heading($font-size: 1.25rem) {
   font-size: $font-size;
   font-weight: bold;
-  margin: .125rem 0;
+  margin: 0;
   color: $app-color-gray5;
 }
 
