--- a/app/assets/stylesheets/structure.scss
+++ b/app/assets/stylesheets/structure.scss
@@ -27,6 +27,11 @@
   }
 }
 
+.st-Header_Actions {
+  @extend .d-flex, .align-items-center;
+  @extend .ml-auto;
+}
+
 .st-Content_Body {
   padding: 0 3.25rem;
 }
