--- a/app/views/pages/product_backlog_blank.html.erb
+++ b/app/views/pages/product_backlog_blank.html.erb
@@ -13,7 +13,7 @@
         <h1 class="sw-Content_Title">
           プロダクトバックログ
         </h1>
-        <div class="pbl-Header_Actions">
+        <div class="st-Header_Actions">
           <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-success' do -%>
             <i class="fa fa-plus"></i>
             追加する
