--- a/app/assets/stylesheets/structure.scss
+++ b/app/assets/stylesheets/structure.scss
@@ -17,7 +17,7 @@
     padding: 2rem 0 .325rem;
     margin: 0 3rem;
     margin-bottom: 1.5rem;
-    border-bottom: 1px solid $app-color-gray5;
+    border-bottom: 1px solid $app-color-text;
   }
   @include base;
 
