--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,4 +1,4 @@
-$app-color-text: #171D19;
+$app-color-text: #1C2023;
 $app-color-subtext: #7F7E63;
 $app-color-bg: #F7F8F9;
 $app-color-shadow: #ced4da;
@@ -9,8 +9,8 @@ $app-font-size-lg: 1rem;
 
 $app-color-gray1: #e9ecef;
 $app-color-gray2: #aaacae;
-$app-color-gray3: #6a6c6d;
-$app-color-gray4: #555657;
+$app-color-gray3: #71777c;
+$app-color-gray4: #60666c;
 $app-color-gray5: #3D454C;
 
 $app-color-primary: #714CA5;
