--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,10 +7,12 @@
 @import 'mixins';
 @import 'site_wide';
 @import 'form';
+@import 'check_item';
 @import 'structure';
 @import 'navigation';
 @import 'user';
 @import 'product_backlog';
+@import 'product_backlog_item';
 @import 'project';
 
 body {
