--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -14,7 +14,7 @@ label {
   text-decoration: none;
 }
 
-.frm-Check_Label {
+.form-check-label {
   color: $app-color-text;
   font-weight: normal;
   font-size: $app-font-size-lg;
