--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -17,6 +17,14 @@
   </li>
 </ul>
 <h6>
+  Product Backlog Item
+</h6>
+<ul>
+  <li>
+    <%= link_to 'Product Backlog Item', page_url(:product_backlog_item) %>
+  </li>
+</ul>
+<h6>
   Project
 </h6>
 <ul>
