--- a/app/views/pages/new_product_backlog_item.html.erb
+++ b/app/views/pages/new_product_backlog_item.html.erb
@@ -10,7 +10,7 @@
 <div class="row">
   <div class="col-lg-8 mx-auto">
     <div class="st-Content">
-      <div class="st-Content_Header-mb">
+      <div class="st-Content_Header">
         <h1 class="sw-Content_Title">
           新しいプロダクトバックログアイテム
         </h1>
@@ -37,7 +37,7 @@
               <% id = "amount#{p}" %>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="amount" id="<%= id %>" value="<%= p %>">
-                <label class="form-check-label frm-Check_Label" for="<%= id %>"><%= p %></label>
+                <label class="form-check-label" for="<%= id %>"><%= p %></label>
               </div>
             <% end -%>
           </div>
