--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -2,9 +2,9 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-@mixin heading($font-size: 1.25rem) {
+@mixin heading($font-size: 1.25rem, $weight: bold) {
   font-size: $font-size;
-  font-weight: bold;
+  font-weight: $weight;
   margin: 0;
   color: $app-color-gray5;
 }
@@ -24,7 +24,7 @@
   }
 }
 
-@mixin avatar($size) {
+@mixin circle($size) {
   display: inline-block;
   vertical-align: middle;
   text-align: center;
@@ -34,5 +34,18 @@
   height: $size;
   line-height: $size;
   font-size: $size * 0.5;
+}
+
+@mixin avatar($size) {
+  @include circle($size);
   color: $app-color-gray5;
+}
+
+@mixin icon-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
 }
