--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -52,9 +52,9 @@
               <span class="pbl-Item_Id">
                 #<%= i[:id] %>
               </span>
-              <p class="pbl-Item_Content">
+              <%= link_to page_url(:product_backlog_item), class: 'pbl-Item_Content' do %>
                 <%= i[:content].join('<br>').html_safe %>
-              </p>
+              <% end -%>
             </div>
             <div class="pbl-Item_Tail">
               <div class="pbl-Item_Amount">
