--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-10 mx-auto">
     <div class="st-Content-mt">
-      <div class="st-Content_Header-mb">
+      <div class="st-Content_Header">
         <h1 class="sw-Content_Title">
           あなたのプロジェクト
         </h1>
