--- a/app/views/pages/new_project.html.erb
+++ b/app/views/pages/new_project.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-8 mx-auto">
-    <div class="st-Content-mt">
+    <div class="st-Content st-Content-mt">
       <div class="st-Content_Header">
         <h1 class="sw-Content_Title">
           新しいプロジェクト
