--- a/app/views/pages/product_backlog_item.html.erb
+++ b/app/views/pages/product_backlog_item.html.erb
@@ -44,7 +44,7 @@
           <div class="pbi-Sub_Body">
             <div class="chk-Item">
               <button class="chk-Item_Check">
-                <i class="chk-Item_Mark"></i>
+                <i class="chk-Item_Mark chk-Item_Mark-ready"></i>
               </button>
               <span class="chk-Item_Label">
                 ドラッグ＆ドロップで入れ替えできること
@@ -52,7 +52,7 @@
             </div>
             <div class="chk-Item">
               <button class="chk-Item_Check">
-                <i class="chk-Item_Mark-checked"></i>
+                <i class="chk-Item_Mark chk-Item_Mark-checked"></i>
               </button>
               <span class="chk-Item_Label">
                 ドラッグ＆ドロップで入れ替えできること
@@ -60,7 +60,7 @@
             </div>
             <div class="chk-Item">
               <button class="chk-Item_Check">
-                <i class="chk-Item_Mark-disabled"></i>
+                <i class="chk-Item_Mark chk-Item_Mark-disabled"></i>
               </button>
               <span class="chk-Item_Label">
                 ドラッグ＆ドロップで入れ替えできること
