remove pbi detail

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -14,6 +14,7 @@ label {
   text-decoration: none;
 }
 
+.custom-control-label,
 .form-check-label {
   color: $app-color-text;
   font-weight: normal;
