--- a/app/views/pages/new_product_backlog_item.html.erb
+++ b/app/views/pages/new_product_backlog_item.html.erb
@@ -23,21 +23,15 @@
             </label>
             <textarea class="form-control" rows="3"></textarea>
           </div>
-          <div class="form-group">
-            <label>
-              詳細
-            </label>
-            <textarea class="form-control" rows="5"></textarea>
-          </div>
           <label>
             大きさ
           </label>
           <div class="form-group">
             <% [1,2,3,5,8,13,21].each do |p| -%>
               <% id = "amount#{p}" %>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="amount" id="<%= id %>" value="<%= p %>">
-                <label class="form-check-label" for="<%= id %>"><%= p %></label>
+              <div class="custom-control custom-radio custom-control-inline">
+                <input class="custom-control-input" type="radio" name="amount" id="<%= id %>" value="<%= p %>">
+                <label class="custom-control-label" for="<%= id %>"><%= p %></label>
               </div>
             <% end -%>
           </div>
