add acceptance criteria form

--- a/app/views/pages/product_backlog_item.html.erb
+++ b/app/views/pages/product_backlog_item.html.erb
@@ -64,6 +64,18 @@
                 </div>
               </div>
             <% end -%>
+            <div class="pbi-AcceptanceCriterionForm">
+              <form>
+                <div class="input-group">
+                  <input type="text" class="form-control">
+                  <div class="input-group-append">
+                    <button type="submit" class="btn btn-success">
+                      <i class="fa fa-plus"></i>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
