--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -16,3 +16,4 @@ $app-color-gray5: #3D454C;
 $app-color-primary: #714CA5;
 $app-color-blue: #63ABD8;
 $app-color-green: #4FA533;
+$app-color-red: #dc3545;
