--- a/app/views/pages/product_backlog_item.html.erb
+++ b/app/views/pages/product_backlog_item.html.erb
@@ -80,5 +80,8 @@
         </div>
       </div>
     </div>
+    <div class="pbi-Delete">
+      <%= link_to 'このプロダクトバックログアイテムを削除する', '', class: 'pbi-Delete_Link' %>
+    </div>
   </div>
 </div>
