--- a/app/assets/stylesheets/product_backlog_item.scss
+++ b/app/assets/stylesheets/product_backlog_item.scss
@@ -49,8 +49,7 @@
 
 .pbi-Main_Amount {
   @include circle(2.5rem);
-  background-color: darken($app-color-blue, 5%);
-  color: lighten($app-color-blue, 30%);
+  @include app-color-pbi-amount;
 }
 
 .pbi-Sub_Header {
