--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -49,3 +49,27 @@
   padding: 0;
   appearance: none;
 }
+
+@mixin break-center($text-color, $line-color) {
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: $text-color;
+
+  &:before,
+  &:after {
+    border-top: 1px solid $line-color;
+    content: '';
+    display: inline;
+    flex-grow: 1;
+  }
+
+  &:before {
+    margin-right: .5rem;
+  }
+
+  &:after {
+    margin-left: .5rem;
+  }
+}
