new product backlog

--- a/app/assets/stylesheets/product_backlog.scss
+++ b/app/assets/stylesheets/product_backlog.scss
@@ -1,7 +1,16 @@
+.pbl-Body {
+  margin-top: 1rem;
+}
+
+.pbl-List {
+  @include paper;
+}
+
 .pbl-Item {
   @extend .d-flex;
-  padding: .75rem 0;
+  padding: 1rem 1.5rem;
   border-bottom: 1px solid $app-color-gray1;
+  background-color: #FFF;
 
   &:last-child {
     border-bottom: none;
