--- a/app/assets/stylesheets/site_wide.scss
+++ b/app/assets/stylesheets/site_wide.scss
@@ -1,8 +1,7 @@
 .sw-Sheet {
+  @include paper;
   padding: 0;
   background-color: #fff;
-  border-radius: .3rem;
-  box-shadow: 0 0 7px $app-color-shadow;
 }
 
 .sw-Content_Title {
