--- a/app/assets/stylesheets/mixins.scss
+++ b/app/assets/stylesheets/mixins.scss
@@ -1,11 +1,16 @@
-@mixin nf() {
+@mixin paper {
+  box-shadow: 0 0 8px $app-color-shadow;
+}
+
+@mixin nf {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-@mixin heading($font-size: 1.25rem, $weight: bold) {
+@mixin heading($font-size: 1rem, $weight: bold) {
   font-size: $font-size;
   font-weight: $weight;
   margin: 0;
+  line-height: 1;
   color: $app-color-gray5;
 }
 
@@ -48,28 +53,4 @@
   outline: none;
   padding: 0;
   appearance: none;
-}
-
-@mixin break-center($text-color, $line-color) {
-  display: flex;
-  align-items: center;
-  text-align: center;
-
-  color: $text-color;
-
-  &:before,
-  &:after {
-    border-top: 1px solid $line-color;
-    content: '';
-    display: inline;
-    flex-grow: 1;
-  }
-
-  &:before {
-    margin-right: .5rem;
-  }
-
-  &:after {
-    margin-left: .5rem;
-  }
 }
