--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -1,24 +1,8 @@
 <% items = [
-  {
-    id: 10,
-    content: %w(ユーザーとして プロダクトバックログアイテムを追加したい それは、プロダクトのアイデアを記録したいから),
-    point: 5
-  },
-  {
-    id: 11,
-    content: %w(ユーザーとして プロダクトバックログアイテムの優先順位を入れ替えたい それは、効率的にプロダクトを開発から),
-    point: 8
-  },
-  {
-    id: 12,
-    content: %w(ユーザー登録),
-    point: 8
-  },
-  {
-    id: 13,
-    content: %w(ログイン),
-    point: 13
-  },
+  { id: 10, content: %w(ユーザーとして プロダクトバックログアイテムを追加したい それは、プロダクトのアイデアを記録したいから), point: 5 },
+  { id: 11, content: %w(ユーザーとして プロダクトバックログアイテムの優先順位を入れ替えたい それは、効率的にプロダクトを開発から), point: 8 },
+  { id: 12, content: %w(ユーザー登録), point: 8 },
+  { id: 13, content: %w(ログイン), point: 13 },
 ] %>
 <div class="row">
   <div class="breadcrumbs">
@@ -30,19 +14,20 @@
 </div>
 <div class="row">
   <div class="col-lg-16 mx-auto">
-    <div class="st-Content">
-      <div class="st-Content_Header">
-        <h1 class="sw-Content_Title">
-          プロダクトバックログ
-        </h1>
-        <div class="st-Header_Actions">
-          <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-success' do -%>
-            <i class="fa fa-plus"></i>
-            追加する
-          <% end -%>
-        </div>
+    <div class="st-BreakHeader">
+      <h1 class="sw-Content_Title">
+        プロダクトバックログ
+      </h1>
+      <span class="st-BreakHeader_Line"></span>
+      <div class="ml-auto">
+        <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-outline-success' do -%>
+          <i class="fa fa-plus"></i>
+          追加する
+        <% end -%>
       </div>
-      <div class="st-Content_Body">
+    </div>
+    <div class="pbl-Body">
+      <div class="pbl-List">
         <% items.each do |i| -%>
           <div class="pbl-Item">
             <div class="pbl-Item_Header">
