--- a/app/views/pages/product_backlog_blank.html.erb
+++ b/app/views/pages/product_backlog_blank.html.erb
@@ -8,27 +8,26 @@
 </div>
 <div class="row">
   <div class="col-lg-16 mx-auto">
-    <div class="st-Content">
-      <div class="st-Content_Header">
-        <h1 class="sw-Content_Title">
-          プロダクトバックログ
-        </h1>
-        <div class="st-Header_Actions">
-          <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-success' do -%>
-            <i class="fa fa-plus"></i>
-            追加する
-          <% end -%>
-        </div>
+    <div class="st-BreakHeader">
+      <h1 class="sw-Content_Title">
+        プロダクトバックログ
+      </h1>
+      <span class="st-BreakHeader_Line"></span>
+      <div class="ml-auto">
+        <%= link_to page_url(:new_product_backlog_item), class: 'btn btn-sm btn-outline-success' do -%>
+          <i class="fa fa-plus"></i>
+          追加する
+        <% end -%>
       </div>
-      <div class="st-Content_Body">
-        <div class="sw-BlankSlate">
-          <p class="sw-BlankSlate_Body">
-            まだプロダクトバックログアイテムはありません。
-          </p>
-          <% 5.times do %>
-            <%= image_tag 'blank_pbi.svg' %>
-          <% end -%>
-        </div>
+    </div>
+    <div class="pbl-Body">
+      <div class="sw-BlankSlate">
+        <p class="sw-BlankSlate_Body">
+          まだプロダクトバックログアイテムはありません。
+        </p>
+        <% 5.times do %>
+          <%= image_tag 'blank_pbi.svg' %>
+        <% end -%>
       </div>
     </div>
   </div>
