--- a/app/assets/stylesheets/structure.scss
+++ b/app/assets/stylesheets/structure.scss
@@ -1,4 +1,4 @@
-.st-Content {
+.st-Sheet {
   @extend .sw-Sheet;
   padding: 0 0 $app-space-y;
 
@@ -7,12 +7,11 @@
   }
 }
 
-.st-Content_Header {
+.st-Sheet_Header {
   @extend .d-flex;
-  padding: $app-space-y 0 .325rem;
+  padding: $app-space-y 0 0;
   margin: 0 $app-space-x;
-  margin-bottom: 1rem;
-  border-bottom: 1px solid $app-color-text;
+  margin-bottom: $app-space-y;
 }
 
 .st-Header_Actions {
@@ -20,7 +19,7 @@
   @extend .ml-auto;
 }
 
-.st-Content_Body {
+.st-Sheet_Body {
   padding: 0 $app-space-x;
 }
 
