--- a/app/views/pages/new_product_backlog_item.html.erb
+++ b/app/views/pages/new_product_backlog_item.html.erb
@@ -9,13 +9,13 @@
 </div>
 <div class="row">
   <div class="col-lg-13 mx-auto">
-    <div class="st-Content">
-      <div class="st-Content_Header">
+    <div class="st-Sheet">
+      <div class="st-Sheet_Header">
         <h1 class="sw-Content_Title">
           新しいプロダクトバックログアイテム
         </h1>
       </div>
-      <div class="st-Content_Body">
+      <div class="st-Sheet_Body">
         <form>
           <div class="form-group">
             <label>
