--- a/app/views/pages/new_project.html.erb
+++ b/app/views/pages/new_project.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-lg-13 mx-auto">
-    <div class="st-Content st-Content-mt">
-      <div class="st-Content_Header">
+    <div class="st-Sheet st-Sheet-mt">
+      <div class="st-Sheet_Header">
         <h1 class="sw-Content_Title">
           新しいプロジェクト
         </h1>
       </div>
-      <div class="st-Content_Body">
+      <div class="st-Sheet_Body">
         <form>
           <div class="form-group">
             <label>
