--- a/app/views/pages/product_backlog_item.html.erb
+++ b/app/views/pages/product_backlog_item.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
   <div class="col-lg-15 mx-auto">
-    <div class="st-Content">
+    <div class="st-Sheet">
       <div class="pbi-Block">
         <div class="pbi-Main">
           <div class="pbi-Main_Header">
