--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-lg-17 mx-auto">
-    <div class="st-Content st-Content-mt">
-      <div class="st-Content_Header">
+    <div class="st-Sheet st-Sheet-mt">
+      <div class="st-Sheet_Header">
         <h1 class="sw-Content_Title">
           あなたのプロジェクト
         </h1>
@@ -12,7 +12,7 @@
           <% end -%>
         </div>
       </div>
-      <div class="st-Content_Body">
+      <div class="st-Sheet_Body">
         <% %w(alpha bravo charlie delta eco).each do |n| -%>
           <div class="prjl-Item">
             <%= link_to "プロジェクト#{n}", '', class: 'prjl-Item_Name' %>
