--- a/app/views/pages/new_project.html.erb
+++ b/app/views/pages/new_project.html.erb
@@ -1,6 +1,14 @@
 <div class="row">
+  <div class="breadcrumbs">
+    <%= link_to 'あなたのプロジェクト', page_url(:project_list) -%>
+    <span class="current">
+      新しいプロジェクト
+    </span>
+  </div>
+</div>
+<div class="row">
   <div class="col-lg-13 mx-auto">
-    <div class="st-Sheet st-Sheet-mt">
+    <div class="st-Sheet">
       <div class="st-Sheet_Header">
         <h1 class="sw-Content_Title">
           新しいプロジェクト
