--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -11,6 +11,7 @@
 
 .nav-Global_AppName {
   color: $app-color-primary !important;
+  font-size: $app-font-size-lg;
   font-weight: bold;
   text-decoration: none;
 }
