--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -1,22 +1,34 @@
-.prjl-Item {
-  @extend .d-flex, .align-items-center;
-  border-bottom: 1px solid $app-color-gray1;
-  margin-bottom: .5rem;
-  padding: .75rem 0;
-
-  &:last-child {
-    margin-bottom: 0;
-    border-bottom: 0;
-  }
+.prjl_Item {
+  @extend .d-flex;
+  @include paper;
+  padding: 1.5rem;
 }
 
-.prjl-Item_Name {
-  @include nf;
+.prjl_Item_ProjectNameLink {
   @include xul($app-color-text, $app-color-text);
 }
 
-.prjl-Item_Navs {
+.prjl_Item_ProjectName {
+  @include heading(1.5rem);
+  @include nf;
+  font-size: $app-font-size-lg;
+}
+
+.prjl_Item_Navs {
   @extend .ml-auto;
-  display: inline-block;
-  font-size: $app-font-size-sm;
+  width: 30%;
+}
+
+ul.prjl-Item_LinkList {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    &:before {
+      @include fa-content('\f14d');
+      color: $app-color-gray3;
+      margin-right: .25rem;
+    }
+  }
 }
