--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -1,31 +1,39 @@
 <div class="row">
-  <div class="col-lg-17 mx-auto">
-    <div class="st-Sheet st-Sheet-mt">
-      <div class="st-Sheet_Header">
+  <div class="col-lg-16 mx-auto">
+    <div class="st-GroundBlock st-GroundBlock-mt">
+      <div class="st-GroundBlock_Header">
         <h1 class="sw-Content_Title">
           あなたのプロジェクト
         </h1>
-        <div class="st-Header_Actions">
-          <%= link_to page_url(:new_project), class: 'btn btn-sm btn-success' do -%>
+        <span class="st-GroundBlock_Line"></span>
+        <div class="ml-auto">
+          <%= link_to page_url(:new_project), class: 'btn btn-sm btn-outline-success' do -%>
             <i class="fa fa-plus"></i>
-            作成する
+            追加する
           <% end -%>
         </div>
       </div>
-      <div class="st-Sheet_Body">
-        <% %w(alpha bravo charlie delta eco).each do |n| -%>
-          <div class="prjl-Item">
-            <%= link_to "プロジェクト#{n}", '', class: 'prjl-Item_Name' %>
-            <ul class="prjl-Item_Navs sw-HorizontalList">
-              <li>
-                <%= link_to 'プロダクトバックログへ', page_url(:product_backlog) %>
-              </li>
-              <li>
-                <%= link_to 'スプリントバックログへ', '' %>
-              </li>
-            </ul>
-          </div>
+    </div>
+    <div class="st-GroundBlock_Body">
+      <div class="prjl_Item">
+        <%= link_to '', class: 'prjl_Item_ProjectNameLink' do %>
+          <h2 class="prjl_Item_ProjectName">
+            プロジェクトAlpha
+          </h2>
         <% end -%>
+        <div class="prjl_Item_Navs">
+          <ul class="prjl-Item_LinkList">
+            <li>
+              <%= link_to 'ホーム', '' %>
+            </li>
+            <li>
+              <%= link_to 'プロダクトバックログ', '' %>
+            </li>
+            <li>
+              <%= link_to 'スプリントバックログ', '' %>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
