--- a/app/assets/stylesheets/product_backlog_item.scss
+++ b/app/assets/stylesheets/product_backlog_item.scss
@@ -1,5 +1,5 @@
 .pbi-Block {
-  padding: $app-space-y $app-space-x .5rem;
+  padding: 1.25rem $app-space-x 0;
   border-bottom: 1px solid $app-color-gray1;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .pbi-Main {
-  padding-bottom: 1rem;
+  padding-bottom: 1.5rem;
 }
 
 .pbi-Main_Header {
