--- a/app/views/pages/project_list.html.erb
+++ b/app/views/pages/project_list.html.erb
@@ -1,5 +1,6 @@
+<% names = %w(Alpha Bravo Charlie Delta Eco) %>
 <div class="row">
-  <div class="col-lg-16 mx-auto">
+  <div class="col-lg-15 mx-auto">
     <div class="st-GroundBlock st-GroundBlock-mt">
       <div class="st-GroundBlock_Header">
         <h1 class="sw-Content_Title">
@@ -15,25 +16,29 @@
       </div>
     </div>
     <div class="st-GroundBlock_Body">
-      <div class="prjl_Item">
-        <%= link_to '', class: 'prjl_Item_ProjectNameLink' do %>
-          <h2 class="prjl_Item_ProjectName">
-            プロジェクトAlpha
-          </h2>
+      <div class="prjl-List">
+        <% names.each do |name| %>
+          <div class="prjl-Item">
+            <%= link_to '', class: 'prjl-Item_ProjectNameLink' do %>
+              <h2 class="prjl-Item_ProjectName">
+                プロジェクト<%= name %>
+              </h2>
+            <% end -%>
+            <div class="prjl-Item_Navs">
+              <ul class="prjl-Item_LinkList">
+                <li>
+                  <%= link_to 'ホーム', '' %>
+                </li>
+                <li>
+                  <%= link_to 'プロダクトバックログ', page_url(:product_backlog) %>
+                </li>
+                <li>
+                  <%= link_to 'スプリントバックログ', '' %>
+                </li>
+              </ul>
+            </div>
+          </div>
         <% end -%>
-        <div class="prjl_Item_Navs">
-          <ul class="prjl-Item_LinkList">
-            <li>
-              <%= link_to 'ホーム', '' %>
-            </li>
-            <li>
-              <%= link_to 'プロダクトバックログ', '' %>
-            </li>
-            <li>
-              <%= link_to 'スプリントバックログ', '' %>
-            </li>
-          </ul>
-        </div>
       </div>
     </div>
   </div>
