--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import 'product_backlog';
 @import 'product_backlog_item';
 @import 'project';
+@import 'sprint_backlog';
 
 body {
   padding-top: calc(56px + 1rem);
