--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -6,6 +6,7 @@ $app-color-text: #1C2023;
 $app-color-subtext: #7F7E63;
 $app-color-bg: #F7F8F9;
 $app-color-shadow: #ced4da;
+$app-color-task: #FCE9B9;
 
 $app-color-gray1: #e9ecef;
 $app-color-gray2: #aaacae;
