--- a/app/views/pages/product_backlog.html.erb
+++ b/app/views/pages/product_backlog.html.erb
@@ -1,6 +1,6 @@
 <% items = [
   { id: 10, content: %w(ユーザーとして プロダクトバックログアイテムを追加したい それは、プロダクトのアイデアを記録したいから), point: 5 },
-  { id: 11, content: %w(ユーザーとして プロダクトバックログアイテムの優先順位を入れ替えたい それは、効率的にプロダクトを開発から), point: 8 },
+  { id: 11, content: %w(ユーザーとして プロダクトバックログアイテムの優先順位を入れ替えたい それは、効率的にプロダクトを開発したいから), point: 8 },
   { id: 12, content: %w(ユーザー登録), point: 8 },
   { id: 13, content: %w(ログイン), point: 13 },
 ] %>
