--- a/app/assets/stylesheets/check_item.scss
+++ b/app/assets/stylesheets/check_item.scss
@@ -1,6 +1,10 @@
 .chk-Item {
   @extend .d-flex, .align-items-center;
   margin-bottom: .25rem;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .chk-Item_Check {
@@ -11,6 +15,10 @@
   @extend .fa;
   font-size: 2rem;
   color: $app-color-gray2;
+
+  &-sm {
+    font-size: 1rem;
+  }
 
   &-ready {
     @extend .fa-circle-thin;
