--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,14 @@
-<h5>
-  Laminate Pages
-</h5>
-<hr>
+<h6>
+  Project
+</h6>
+<ul>
+  <li>
+    <%= link_to 'Project List', page_url(:project_list) %>
+  </li>
+  <li>
+    <%= link_to 'New Project', page_url(:new_project) %>
+  </li>
+</ul>
 <h6>
   Product Backlog
 </h6>
@@ -25,13 +32,10 @@
   </li>
 </ul>
 <h6>
-  Project
+  Sprint Backlog
 </h6>
 <ul>
   <li>
-    <%= link_to 'Project List', page_url(:project_list) %>
-  </li>
-  <li>
-    <%= link_to 'New Project', page_url(:new_project) %>
+    <%= link_to 'Sprint Backlog', page_url(:sprint_backlog) %>
   </li>
 </ul>
