--- a/app/views/shared/_global_nav.html.erb
+++ b/app/views/shared/_global_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="nav-Global navbar navbar-expand-md fixed-top navbar-light bg-light">
+<nav class="nav-Global navbar navbar-expand-md navbar-light bg-light">
   <a class="nav-Global_AppName navbar-brand" href="/">Laminate</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
